--- a/server/package.json
+++ b/server/package.json
@@ -1,1 +1,11 @@
-{"name": "portfolio-backend"}
+{
+  "name": "portfolio-backend",
+  "type": "module",
+  "dependencies": {
+    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "mongoose": "^7.6.0",
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5"
+  }
+}
